03_ingress/dep_two.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
spec:
  replicas: 1
  selector:
    matchLabels:
     app: httpd
  template:
    metadata:
      labels:
        app: httpd

    spec:
     containers:
     - name: httpd
       image: httpd
       ports:
       - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector: 
    app: httpd
