03_ingress/ingress_resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # Route to NGINX App
          - path: /app1(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80

          # Route to HTTPD (Apache) App
          - path: /app2(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: httpd
                port:
                  number: 80

          - path: /(.*)
            pathType: Prefix
            backend: 
              service:
                name: nginx
                port:
                  number: 80
